--- a/app/src/main/res/drawable/card_bg.xml
+++ b/app/src/main/res/drawable/card_bg.xml
@@ -2,14 +2,15 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
+    <corners
+        android:radius="15dp">
+    </corners>
+
     <solid
-        android:color="#FFFFFF">
+        android:color="#ffffff"
+        >
     </solid>
 
-    <stroke
-        android:color="#FFFFFF"
-        android:width="2dp">
-    </stroke>
 
     <size
         android:width="165dp"
