--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -9,7 +9,8 @@
    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-       android:background="@drawable/aestheticbg"/>
+       android:background="@drawable/aestheticbg"
+       />
 
   <TextView
       android:id="@+id/tv_title"
@@ -47,6 +48,7 @@
       android:fontFamily="@font/roboto_regular"
       android:layout_above="@id/password"
       android:background="@drawable/textboxes_shape"
+      android:elevation="7dp"
       android:textColor="@color/HeaderColor"
       android:textSize="15sp" />
 
@@ -65,6 +67,7 @@
       android:inputType="textPassword"
       android:layout_centerInParent="true"
       android:background="@drawable/textboxes_shape"
+      android:elevation="7dp"
       android:textSize="15sp" />
 
   <Button
